--- a/external-listeners/pom.xml
+++ b/external-listeners/pom.xml
@@ -51,13 +51,13 @@
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-core-asl</artifactId>
-            <version>1.9.5</version>
+            <version>${jackson.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.1.3</version>
+            <version>${httpclient.version}</version>
         </dependency>
 
         <dependency>
