--- a/infrastructure/pom.xml
+++ b/infrastructure/pom.xml
@@ -49,7 +49,7 @@
         <dependency>
             <groupId>org.cloudfoundry</groupId>
             <artifactId>cloudfoundry-runtime</artifactId>
-            <version>0.8.0</version>
+            <version>${cloudfoundry.version}</version>
         </dependency>
 
         <dependency>
@@ -61,7 +61,7 @@
         <dependency>
             <groupId>com.thoughtworks.xstream</groupId>
             <artifactId>xstream</artifactId>
-            <version>1.4.3</version>
+            <version>${xstream.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -76,17 +76,17 @@
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
-            <version>1.6.11</version>
+            <version>${aspectj.version}</version>
         </dependency>
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
-            <version>1.6.11</version>
+            <version>${aspectj.version}</version>
         </dependency>
         <dependency>
             <groupId>net.sf.ehcache</groupId>
             <artifactId>ehcache</artifactId>
-            <version>2.8.0</version>
+            <version>${ehcache.version}</version>
         </dependency>
         <dependency>
             <groupId>net.sf.ehcache</groupId>
