--- a/pom.xml
+++ b/pom.xml
@@ -27,15 +27,22 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <axon.version>2.1</axon.version>
-        <slf4j.version>1.6.6</slf4j.version>
-        <spring.version>3.2.6.RELEASE</spring.version>
-        <spring.security.version>3.2.0.RELEASE</spring.security.version>
-        <junit.version>4.8.1</junit.version>
-        <mockito.version>1.8.5</mockito.version>
-        <hamcrest.version>1.1</hamcrest.version>
-        <mongodb.java.version>2.8.0</mongodb.java.version>
-        <springdata.mongodb.version>1.0.2.RELEASE</springdata.mongodb.version>
+        <axon.version>2.1.1</axon.version>
+        <slf4j.version>1.7.6</slf4j.version>
+        <spring.version>4.0.2.RELEASE</spring.version>
+        <spring.security.version>3.2.2.RELEASE</spring.security.version>
+        <junit.version>4.11</junit.version>
+        <mockito.version>1.9.5</mockito.version>
+        <hamcrest.version>1.3</hamcrest.version>
+        <mongodb.java.version>2.11.4</mongodb.java.version>
+        <springdata.mongodb.version>1.4.1.RELEASE</springdata.mongodb.version>
+        <xstream.version>1.4.7</xstream.version>
+        <aspectj.version>1.6.11</aspectj.version>
+        <ehcache.version>2.8.1</ehcache.version>
+        <cloudfoundry.version>0.8.6</cloudfoundry.version>
+        <log4j.version>1.2.17</log4j.version>
+        <httpclient.version>4.3.3</httpclient.version>
+        <jackson.version>1.9.13</jackson.version>
     </properties>
 
     <modules>
@@ -199,7 +206,7 @@
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>1.2.16</version>
+            <version>${log4j.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.sun.jdmk</groupId>
